@@ -293,7 +293,7 @@ public class LauncherSupport {
             throw new BuildException("Listener class " + className + " is not of type " + TestExecutionListener.class.getName());
         }
         try {
-            return (TestExecutionListener) klass.newInstance();
+            return (TestExecutionListener) klass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new BuildException("Failed to create an instance of listener " + className, e);
         }
